22 May 2007
+ Changed the default hour format to "I" (eye) from l (ell) in
  config.php. Some php configurations do not recognize it.
+ Updated files: conf/config.php

Version 1.5.0
-----------------------------------------------------------------
24 April 2007
+ Added day listing to upcoming events list.
+ Some other small edits.
+ Updated files: templates/view/upcoming.tpl, templates/style.css

23 April 2007
+ Can now choose to show upcoming events.
+ Removed schedule created message when using javascript popup
+ Moved getEvents function in the Schedule class
+ Increase calendar event form's popup height
+ Reformated schedule form
+ Updated files: conf/config.php,
                 templates/admin/forms/edit_schedule.tpl
                 templates/style.css,
                 templates/view/upcoming.tpl


13 April 2007
+ Bug # 1699659 - Calendar will not show 'Add Event' link if a
  schedule has not been created. Instead, the create schedule link
  will appear.

4 April 2007
+ Updated language format

12 March 2007
!! Calendar icon still needs updating.

Version 1.4.1
------------------------------------------------------------------

12 March 2007
+ Made noon the default time for new events.
+ Fixed Daylight Saving Time breaking repeats.
+ Delete event links made secure.
+ Days made linkable in month list view.
+ Added a sync dates button on the edit event form.

5 March 2007
+ Changed control panel icon

Version 1.4.0
------------------------------------------------------------------
23 February 2007
+ Fixed bug with navigation links when viewing single event.

20 February 2007
+ Uninstall clears calendar convert status.
+ Added new phrases to translation.

19 February 2007
+ Reduced translate functions
+ Removed single quotes from default integers in sql file.

2 February 2007
+ Bug #1648965. Clicking Day or Week from grid view pulls correct day
+ Changed "Today" link to view appropiate description to prevent
  confusion